# bbm25-haystack

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml  test.yml
docs/: bbm25_haystack.html  index.html  search.js
docs/bbm25_haystack/: __about__.html  bbm25_retriever.html  bbm25_store.html  filters.html
scripts/: benchmark_beir.py
src/bbm25_haystack/: __about__.py  __init__.py  bbm25_retriever.py  bbm25_store.py  filters.py
tests/: test_document_store.py  test_retriever.py
